NIM-21632 releases/release_notes/7.8 add IPV6 summary table information

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -58,7 +58,8 @@ A new **IPv6 Managed IP Summary** table has been added under **Technology → Ad
 - **Aruba IAP - AOS 10+**
   - Virtual Controllers are no longer created as devices in IP Fabric due to architectural changes introduced in AOS 10.
   - The cluster group name is now displayed in a new column, `AP Cluster Name`, within the table: `Technology/Wireless/Access points`.
-
+- Added support for Fortinet IPv4 and IPv6 route summary tables.
+- Added support for Cisco ASA, ACI, IOS XR, NX-OS, FTD and Palo Alto IPv6 route summary tables.
 
 ### API Changes
 
