--- a/docs/releases/release_notes/7.6.md
+++ b/docs/releases/release_notes/7.6.md
@@ -55,17 +55,15 @@ Added a pre-upgrade check for available disk space to prevent the appliance from
 The `ipf-jumphost` service, which has logged to `/var/log/ipf/ipf-jumphost/` since release 7.0 to keep its logs separate from system logs, now includes
 these logs in TechSupport exports to assist with troubleshooting.
 
-#### Upgraded NodeJS to v22.19.0
+#### Upgraded Node.js to v22.19.0
 
-All JavaScript services are now running on a version `v22.19.0` of NodeJS.
+All JavaScript-based services are now running on Node.js version `v22.19.0`.
 
-#### Credentials to access a database and RabbitMQ moved out of the built code
+#### Database and RabbitMQ Credentials Moved Out of Built Code
 
-Previously, due to how application configuration was handled via the JSON file, several credentials were embedded
-directly into the built JavaScript code. This is no longer the case — these credentials are now automatically
-generated and provided through environment variables. The default guest account for RabbitMQ has been removed.
-Only internal, non-management accounts are now used for communication between the application and the broker.
-
+Previously, due to how the application configuration was managed through a JSON file, several credentials were embedded
+directly into the built JavaScript code. This is no longer the case — credentials are now automatically generated and supplied via environment variables.
+The default RabbitMQ guest account has been removed. Only internal, non-management accounts are now used for communication between the application and the message broker.
 
 ### API Changes
 
@@ -82,14 +80,12 @@ The payload size limit has been introduced with a default of 20 MB, except for t
 - `/os/upload-nimpee-cert` -> 5 MB
 - `PATCH /settings` -> 100 MB
 
-#### RBAC
-
-The built-in RBAC policy `others` (ID: read) has been renamed for greater clarity.
-Despite its ID, this policy also allows write operations for saved filters and graphs.
-
 ### Other Changes
 
 - The system status page is now accessible only after login.
 - The license upload endpoint is now protected by authentication and accessible only to admin users.
 - When a user changes their password, all active sessions for that user are invalidated.
 - Session token is now invalidated upon logout.
+- The built-in Role-Based Access Control (RBAC) policy previously named others (ID: read) has been renamed for improved clarity.
+  - Despite its ID, this policy also permits write operations for saved filters and graphs. The rename helps better reflect its actual
+    permissions and avoid confusion between read-only and read/write capabilities.
