--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -6,7 +6,7 @@ description: In this section, you can find the release notes for `v7.5` releases
 
 !!! danger "Upgrade Notice"
 
-    An upgrade to `7.5.x` or later is **only** possible from release `7.3.17`.
+    An upgrade to `7.5.x` or later is **only** possible from release `7.3.23` or newer.
 
     When upgrading to `7.5` release, database will be migrated from **ArangoDB** to **PostgreSQL**.
 
@@ -14,100 +14,149 @@ description: In this section, you can find the release notes for `v7.5` releases
 
     Note that [hardware requirements](../../overview/index.md#hardware-requirements) differ from previous releases.
 
-    We strongly recommend installing release `7.5` only on secondary instances within the EA program.
-
-    Before upgrading, review the [API Changes](#api-changes),
+    Before upgrading, review the [7.5 FAQ](7.5_FAQ.md), [API Changes](#api-changes),
     [Backward Compatibility](#backward-compatibility) and [Known Issues](#known-issues) sections.
 
 --8<-- "snippets/clear_browser_cache.md"
 
-## Backward Compatibility
-
-- Snapshots from release `5.x` and earlier are not supported and may fail to load properly.
-
 ## Upgrade Guide for **7.5** Release
 
-This guide walks you through a safe, in-place upgrade from IP Fabric `v7.3` (or newer) to `v7.5`,
+This guide walks you through a safe upgrade from IP Fabric `v7.3.23` (or newer) to `v7.5`
 which in turn migrates the database from **ArangoDB** to **PostgreSQL**.
----
 
-### Before You Begin
+Migrating to **PostgreSQL** will accelerate delivery of **future IP Fabric features and enhancements**, enabling greater scalability.
 
-| Item | Requirement |
-|------|-------------|
-| **Supported Starting Version** | Your appliance must be on the latest version of **v7.3**. |
-| **Hardware** | **We highly recommend using directly attached NVMe storage.** Minimum requirements: **8 vCPU, 32 GB RAM**. For more information, see [Hardware Requirements](../../overview/index.md#hardware-requirements). <div class="admonition info"><p class="admonition-title">Why NVMe storage?</p><p>PostgreSQL’s performance relies heavily on fast random I/O. Rotary (HDD) storage is no longer supported for production.</p></div> |
-| **Downtime** | Plan a maintenance window of **2+ hours**, depending on snapshot sizes, amount and hardware performance. |
-| **Backup** | Take a **hypervisor snapshot** *after shutting down* the VM (cold snapshot). |
-| **Benchmark** | Run `sudo ipf-checker -d -s` to measure disk performance. This is an informational test only. (**Note:** The test saturates the appliance, takes approximately 5-6 minutes, and should be scheduled during off-hours.) |
-| **Customer Support** | Have your IP Fabric Support contact handy in case questions arise. You can also [submit a ticket](https://ipfabric.atlassian.net/servicedesk/customer/portal/1) to our service desk. |
-
----
-
-### Step-by-Step Upgrade Workflow
-
-Follow the steps in order. **Do not interrupt the process** once Step 4 (Launch the `v7.5` upgrade) begins.
-
-??? note "Step 1 - Plan & Notify"
-    1. Make sure that prerequisites above are met.
-    2. Schedule a downtime window and inform stakeholders that the appliance will be offline.
-
-??? note "Step 2 - Prepare the Appliance"
-    1. Shut down the appliance gracefully [from the CLI](../../System_Administration/Command_Line_Interface/How_to/troubleshooting.md#reboot-and-shutdown).
-    2. Create a cold snapshot in your hypervisor; verify its completion.
-    3. Power the appliance back on.
-
-??? note "Step 3 - Launch the `v7.5` Upgrade"
-    1. Follow [offline update manual](../../System_Administration/system_update.md#offline-update) or set [EA release channel](#release-channels) to receive online updates.
-    2. The upgrade will:
-
-       - Export configuration and snapshots
-       - Stop services
-       - Install `v7.5` components
-       - Start services and migrate data to **PostgreSQL**
-       - Import configuration and snapshots
-
-    3. After completing the upgrade, proceed to Step 4, if any issues occur during the process, please contact our [Support Team](https://ipfabric.atlassian.net/servicedesk/customer/portal/1) for assistance.
-
-??? note "Step 4 - Post-upgrade Validation"
-    1. Log in to the UI, ensure all settings and snapshots have been migrated.
-    2. Launch a Discovery and verify that it finishes.
-    3. Optionally run a quick API request or path lookup to confirm core functionality.
-    4. Observe CPU, RAM usage to ensure the VM is not overloaded.
-    5. Run disk performance benchmark
-       ```shell
-       sudo ipf-checker -d -s
-       ```
-       Save the output for future reference. If possible, we would appreciate you sharing this output with our team through the [Support Portal](https://ipfabric.atlassian.net/servicedesk/customer/portal/1).
----
+We appreciate your cooperation in following the guide above closely to ensure a seamless upgrade.
 
 !!! info
 
-    Migrating to **PostgreSQL** will accelerate delivery of **future IP Fabric features and enhancements**, enabling greater scalability.
+    If you need further guidance, please reach out to our team -- [Support Portal](https://ipfabric.atlassian.net/servicedesk/customer/portal/1).
 
-    We appreciate your cooperation in following the guide above closely to ensure a seamless upgrade.
+## Before You Begin
 
-    If you need guidance, please reach out to our team -- [Support Portal](https://ipfabric.atlassian.net/servicedesk/customer/portal/1).
+Upgrading from **7.3 (ArangoDB)** to **7.5 (PostgreSQL)** introduces significant changes in database architecture and hardware requirements. Please review these three prerequisites carefully:
+
+### 1. Understand Key Changes
+
+- **Database backend** moves from ArangoDB to PostgreSQL for improved scalability and performance.
+- PostgreSQL relies on **disk performance** (IOPS, latency, throughput), unlike ArangoDB which was memory-heavy.
+
+### 2. Hardware Requirements
+
+- **7.5** introduces significant changes in hardware requirements, please validate hardware sizing, see [hardware requirements](../../overview/index.md#hardware-requirements) and [IOPS requirements](../../overview/index.md#minimal-iops-requirements).
+- Ensure [VM drivers](../../platform_first_steps/01-deployment.md#setting-vm-from-scratch-importing-vmdk-image) are optimized for fast disk operations.   
+- Use **directly attached NVMe or SSD storage** (avoid network-attached disks).
+
+
+### 3. Pre-Upgrade Check
+
+- Run `sudo ipf-checker -d -s` on your `7.3.23` instance or newer.
+- From `7.3.23` onward, the check runs automatically during upgrade and **halts if any test fails**.
+- Share failing results with [IP Fabric Support](https://ipfabric.atlassian.net/servicedesk/customer/portal/1).
+- Plan a maintenance window of **2+ hours**, depending on snapshot sizes, amount and hardware performance.
+- Take a **hypervisor snapshot** *after shutting down* the VM (cold snapshot).
+
+---
+
+## Step-by-Step Upgrade Workflow
+
+### Option A: Clone Current Instance to New Hardware (Most Recommended)
+
+??? note "Step 1 -- Validate Hardware"
+
+    - Confirm your cloned instance meets [Hardware Requirements](../../overview/index.md#hardware-requirements).
+
+??? note "Step 2 -- Run Pre-Upgrade Checker"
+
+    - Execute `sudo ipf-checker -d -s` and review results - **make sure it passes all tests**.
+    - Share results with IP Fabric Support if needed.
+
+??? note "Step 3 -- Apply Upgrade Package"
+
+    - Use the provided GA release package for `7.5`, see [System Update](../../System_Administration/system_update.md#update).
+
+??? note "Step 4 -- Final Validation"
+
+    - Run a new discovery and verify that all devices has been found.
+    - Adjust discovery times between old and new instance to avoid running discovery at the same time.
+    - Operate both instances for several days before decommissioning 7.3.
+
+### Option B: Build a New 7.5 Instance (Recommended)
+
+??? note "Step 1 -- Provision Hardware"
+
+    - Allocate recommended CPU, RAM, and disk resources, see [Hardware Requirements](../../overview/index.md#hardware-requirements).
+
+??? note "Step 2 -- Install 7.5 GA Image"
+
+    - Deploy [IP Fabric Virtual Machine](../../platform_first_steps/01-deployment.md).
+    - Run [IPF CLI Config](../../platform_first_steps/02-ipf_cli_config.md).
+    - Access user interfance and [install license](../../platform_first_steps/03-access_ui.md).
+
+??? note "Step 3 -- Validate Disk Performance"
+
+    - Run `sudo ipf-checker -d -s` on the new instance.
+    - Share results with IP Fabric Support if needed.
+
+??? note "Step 4 -- Migrate Settings"
+
+    - [Export configuration](../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md#configuration-export) from 7.3.23 instance and [import it](../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md#configuration-import) into 7.5.
+    - **Note:** Some items require manual steps, see [FAQ](7.5_FAQ.md#5-settings-snapshot-migration).
+
+??? note "Step 5 -- Migrate Snapshots"
+
+    - On 7.3: [Download snapshots](../../IP_Fabric_GUI/discovery_snapshot.md#download-snapshots) individually.
+    - On 7.5: [Load snapshots](../../IP_Fabric_GUI/discovery_snapshot.md#load-snapshot-from-file) from file one by one.
+   
+??? note "Step 6 -- Final Validation"
+
+    - Run initial discovery on the new instance.
+    - Adjust discovery times between old and new instance to avoid running discovery at the same time.
+    - Operate both instances for several days before decommissioning 7.3.
+
+### Option C: In-Place Upgrade
+
+??? note "Step 1 -- Validate Hardware"
+
+    - Confirm your current instance meets [Hardware Requirements](../../overview/index.md#hardware-requirements).
+
+??? note "Step 2 -- Run Pre-Upgrade Checker"
+
+    - Execute `sudo ipf-checker -d -s` and review results - **make sure it passes all tests**.
+    - Share results with IP Fabric Support if needed.
+   
+??? note "Step 3 -- Prepare the Appliance"
+    1. Shut down the appliance gracefully [from the CLI](../../System_Administration/Command_Line_Interface/How_to/troubleshooting.md#reboot-and-shutdown).
+    2. Adjust hardware sizing and drivers if needed.
+    3. Create a cold snapshot in your hypervisor; verify its completion.
+    4. Power the appliance back on.
+   
+??? note "Step 4 -- Apply Upgrade Package"
+
+    - Use the provided GA release package for `7.5`, see [System Update](../../System_Administration/system_update.md#update).
+   
+??? note "Step 5 -- Post-Upgrade Validation"
+
+    - Run a new discovery and verify that all devices has been found.
 
 ## Known Issues
 
 ### Performance Limitations
 
-- **Snapshot Processing:** Snapshot loading and discovery times may increase as the number of loaded snapshots grows. It is recommended to gradually
- increase the snapshot load limit in small increments to avoid extended load times.
+- **Snapshot Processing:** Snapshot load and discovery time may increase as the number of loaded snapshots grows. With more loaded snapshots, post-discovery calculation time increases by **~10% per snapshot**. For example with 5 loaded snapshots, calculation time may increase by ~30–50%. We are actively working on mitigating this slowness.
+
 - **Intent Verification Rules:** The computation of Intent Verification Rules during snapshot loading or creation may take longer than expected.
  This process is not yet optimized, but performance improvements will be included in an upcoming patch release.
-- **Table Loading Performance:** Some tables may experience longer loading times when a large number of snapshots is loaded. Please contact customer support if you experience such a case.
-- During snapshot loading, the GUI may become unresponsive, requiring a page refresh.
-- The **xDP Unidirectional Neighbors** table may be unable to load.
 
   !!! Hint
 
       To improve performance, particularly when computing Intent Verification Rules, minimize the number of loaded snapshots.
 
-### Database Migration Issues
+- **Table Loading Performance:** For the majority of commonly used tables, we have optimized their performance. We are currently working on optimizing the performance of other tables. Please actively report any table that exhibit slow performance, and we will promptly address and improve their performance.
 
-- BGP community settings may not import correctly and may need reconfiguration.
+### Backward Compatibility
+
+- Snapshots from release `5.x` and earlier are not supported and may fail to load properly.
 
 ## v7.5.9 (October 14th, 2025; EA)
 
