MQ-9013: Release 7.5.10 for GA

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -158,25 +158,43 @@ Upgrading from **7.3 (ArangoDB)** to **7.5 (PostgreSQL)** introduces significant
 
 - Snapshots from release `5.x` and earlier are not supported and may fail to load properly.
 
+## v7.5.10 (October 31st, 2025; GA)
+
+```
+SHA256 (ipfabric-update-7-5-10+0.tar.zst.sig) = a58054795da9906818ce7e8274e6a18dbe995099612fb24e4ac04179c13e9ab4
+MD5 (ipfabric-update-7-5-10+0.tar.zst.sig) = 385a621fe3219141edd656f075f3cae0
+SHA256 (ipfabric-7-5-10+0.qcow2) = 9f631190d571b0b96955158a15d0aeaf21f7dac3c020148690b26902d8ca23c6
+MD5 (ipfabric-7-5-10+0.qcow2) = cbd1c96c7d731a558ad04f67c5ea3014
+SHA256 (ipfabric-7-5-10+0.vmdk) = 5e8a6ed06bc2f4e956544318aa4570329848bdbe76b07bdf4b15a89ce267183b
+MD5 (ipfabric-7-5-10+0.vmdk) = b9f5304d4eb37e95cdddbf73cb132175
+SHA256 (ipfabric-7-5-10+0.vhdx.zst) = c0f1ad086d885a06794548ec6afe6a00e8463e63689aed47a10817ecccdafc9c
+MD5 (ipfabric-7-5-10+0.vhdx.zst) = efd80906527f4670d4073b84118b2b31
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-5-10+0.ova) = 83efba239a10aca70e2010b7126867beb8fb624333138515de29cd4a20c41d1f
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-5-10+0.ova) = 6d036bbf943883f55afd147b96c36a92
+SHA256 (unsupported-ESXi7.0-ipfabric-7-5-10+0.ova) = 840052d41598cbe9d0d7c14d2872271e539630062b443e0c6046cecdd5ff93b0
+MD5 (unsupported-ESXi7.0-ipfabric-7-5-10+0.ova) = b02f21441ee5b2df071854e41d00d99e
+SHA256 (ESXi8.0-ipfabric-7-5-10+0.ova) = 74e0e730f7a322cd9067bd6fec8b3aeb55bc2f91c3fe2a9b6c1af07af6134591
+MD5 (ESXi8.0-ipfabric-7-5-10+0.ova) = a722d92fa16bd07032005a62a6bf22c0
+```
+
+### Improvements
+
+- Updated `ipf-checker` thresholds based on recommended PostgreSQL IOPS values.
+- Added parsing to include missing PTP information on Cisco IOS-XR devices.
+- Fixed empty Technology --> Addressing --> MAC table for Juniper devices.
+- Fixed discovery of Aruba 503H access points managed by wireless controllers.
+- Resolved parsing errors during discovery of Dell 4112 and 9116 switches.
+- Enabled recursive MPLS lookup in vMplsForwarding when nexthopList contains an MPLS action without vrfName (e.g., action 'pop').
+- Improved SSH-based discovery performance by reducing responseStartMs overhead.
+- Resolved `column dev.attributes does not exist` error preventing the GCP Inventory table from loading.
+- Corrected display of IPv6 addresses with ports to use standardized `[<ipv6>]:port` notation in the UI.
+- Fixed LDAPS configuration failure caused by a broken reference to LDAPS certificate and incorrect migration of LDAP groups to IP Fabric roles.
+- Populated Inventory --> Hosts with wired hosts present in core switches' ARP tables.
+- Optimized Technology --> Spanning Tree --> Neighbor table load time.
+- Prevented frontend crash when emptying the dashboard Intent Verification widget.
+
+
 ## v7.5.9 (October 14th, 2025; EA)
-
-```
-SHA256 (ipfabric-update-7-5-9+0.tar.zst.sig) = 44c3e804b243630171bcf466f90040678a3e96177adc5eb99608a78d724d99c0
-MD5 (ipfabric-update-7-5-9+0.tar.zst.sig) = 3e53d832dc42d42b1ca3e46edded3a81
-SHA256 (ipfabric-7-5-9+0.qcow2) = 0b1e05e654ff838a9a2af81e8b95a42cd83e76ac4c00bec3dda5a3a80ada92e7
-MD5 (ipfabric-7-5-9+0.qcow2) = 26d805f32bb133d33dfa3a5c0b132f5f
-SHA256 (ipfabric-7-5-9+0.vmdk) = 3e7500a8f1164e9c638ca14414d60776e622cb2278e00106b4522076084e8412
-MD5 (ipfabric-7-5-9+0.vmdk) = 3c475c8026c37a5f6d31268657c69e34
-SHA256 (ipfabric-7-5-9+0.vhdx.zst) = 95d9940329dda821707a2e9f63b3e03e7e303a44a3ec888ec0d1834101254998
-MD5 (ipfabric-7-5-9+0.vhdx.zst) = b56c8faee6e77bf733cd89ed6f9dce45
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-5-9+0.ova) = 8eb1f0b6ffb4902deb351c50626cd6de72557a65f0d897a1c85cb9742f3bd474
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-5-9+0.ova) = cf64159dbdb2385d5f6b90ded1b60915
-SHA256 (unsupported-ESXi7.0-ipfabric-7-5-9+0.ova) = b193682f3196d73e5d46f2401096d3b820e9b933b3378baa82ad19dd675cb0d0
-MD5 (unsupported-ESXi7.0-ipfabric-7-5-9+0.ova) = 6d928ae3549fd57cfafa3b28fe3fe958
-SHA256 (ESXi8.0-ipfabric-7-5-9+0.ova) = e2f96ae541aaea01fb5eeaabac708efa81d6c8f9321e8b77067e1c44b52c9269
-MD5 (ESXi8.0-ipfabric-7-5-9+0.ova) = a356ed24a4b1b00eb2cf964a3ab3570d
-
-```
 
 ### Improvements
 
