--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,7 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 645 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 650 fixed issues.
 
 ## 7.3.21
 
@@ -27,8 +27,13 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-21606` -- High -- ACI Path lookup failing on `Traffic loop detected.`
 - `NIM-21676` -- Medium -- MAC Address not formatted correctly on 7.3
 - `NIM-21681` -- High -- Manual upgrade - app not refreshed after upgrade
+- `NIM-21725` -- Highest -- ACI - E2E PL - improvement of routing after SG
+- `NIM-21748` -- Highest -- ACI - E2E PL - wrongly dropped ethernet header
 - `NIM-21815` -- High -- Addressing -> MAC Table is empty for Juniper devices
 - `NIM-21835` -- High -- GCP Inventory table does not load with column dev.attributes does not exist error
+- `NIM-21891` -- Medium -- ACI - e2e pathlookup - dropped ethernet header causes loop
+- `NIM-21892` -- Medium -- ACI - e2e pathlookup - tunnel packet dropped on spine
+- `NIM-21904` -- Highest -- Double ACI table match, second one empty, VLAN's not matching interface
 
 ### Tasks
 
