MQ-9013: Release 7.5.10 for GA

--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -6,7 +6,56 @@ search:
 
 # LLRN 7.5
 
-These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 911 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 944 fixed issues.
+
+## 7.5.10
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-20279` -- Highest -- Username's credentials are not sanitized
+- `NIM-21363` -- Highest -- Do recursive MPLS lookup
+- `NIM-21631` -- High -- Palo Alto Parsing and Mapping issues
+- `NIM-21649` -- High -- IOS-XR PTP missing information
+- `NIM-21688` -- High -- UI - wrongly displayed IPv6 addresses with ports
+- `NIM-21725` -- Highest -- ACI - E2E PL - improvement of routing after SG
+- `NIM-21743` -- Highest -- STP instance queries are tremendously slow
+- `NIM-21748` -- Highest -- ACI - E2E PL - wrongly dropped ethernet header
+- `NIM-21760` -- High -- X-API-* Response Headers missing when wrong version is used.
+- `NIM-21813` -- Medium -- Unencrypted passwords in configuration show in sanitized configuration downloads in management configuration
+- `NIM-21815` -- High -- Addressing -> MAC Table is empty for Juniper devices
+- `NIM-21835` -- High -- GCP Inventory table does not load with column dev.attributes does not exist error
+- `NIM-21841` -- Highest -- PSQL slow getSnHostnameLoginTypeLists query during Tasker calculations
+- `NIM-21848` -- Highest -- Can't import 7.3.20 config onto 7.5.8/7.5.9
+- `NIM-21855` -- Highest -- IPF 7.5 Slow discovery when many router commands are needed due to responseStartMs
+- `NIM-21864` -- High -- Aruba - 503H APs are not discovered
+- `NIM-21875` -- Highest -- LDAP broken after 7.3.20 -> 7.5.9 upgrade due to CA certificate reference issue
+- `NIM-21883` -- Highest -- vLdap migration 7.3 to 7.5 does not properly migrate the reference to vRoles
+- `NIM-21884` -- High -- Wired hosts missing in Inventory → Hosts are being visible in ARP tables.
+- `NIM-21887` -- Highest -- IPF 7.5 Emptying dashboard intent verification widget causes frontend crash
+- `NIM-21891` -- Medium -- ACI - e2e pathlookup - dropped ethernet header causes loop
+- `NIM-21892` -- Medium -- ACI - e2e pathlookup - tunnel packet dropped on spine
+- `NIM-21897` -- Medium -- Cisco nx-os mroute task fails on loading dep ipMrouteAll
+- `NIM-21904` -- Highest -- Double ACI table match, second one empty, VLAN's not matching interface
+- `NIM-21911` -- High -- Dell - parsing errors during PoC
+- `NIM-21917` -- Medium -- Azure - Cannot validate instanceView
+- `NIM-21919` -- Medium -- Azure - Cannot map VirtualMachine
+- `NIM-21941` -- Highest -- Slow PSQL Spanning Tree Neighbors table
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-21648` -- Medium -- Update IPF Checker with IOPS values
+- `NIM-21963` -- Highest -- Set default Maximum number of loaded snapshots and locked snapshots in 7.5 to same values like in 7.3
+
+### Sub-Tasks
+
+Sub-tasks are very well contained work packages, organized under Tasks.
+
+- `NIM-21766` -- Medium -- Paloalto mapping issue - tasks/mac - Can't find vlanId for ethernet1/3
+- `NIM-21772` -- Medium -- Paloalto mapping issue - preprocess rulebase
 
 ## 7.5.9
 
@@ -450,6 +499,7 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-15816` -- High -- Fix queries failing tests
 - `NIM-16494` -- High -- Prepare for PSQL stable release
 - `NIM-17027` -- High -- Transparent FW
+- `NIM-17374` -- Medium -- Discovery improvements [7.5]
 - `NIM-17401` -- High -- Support for IPv6 in GUI
 - `NIM-17744` -- Medium -- OAS Improvements
 - `NIM-17950` -- High -- Implement PostgresTaskerSetEdgeAzureExpressRouteDataProvider data provider
