improved wording and added RNs

--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -57,6 +57,13 @@ If you're experiencing extended discovery times (9+ hours), this issue is likely
 
 Processing of `show ip route detail full` commands has improved significantly in version `7.3.20`. You may not experience these issues after the upgrade.
 
+## v7.3.23 (xxx , 2025; GA)
+
+### Important Notice
+
+All new installations utilise the GPT disk partitioning scheme, while older versions and all pre-existing installations
+utilise the MBR partitioning scheme. More details can be found on [Server Disk Space Summary](../../System_Administration/increase_disk_space.md).
+
 ## v7.3.22 (October 21th, 2025; GA)
 
 ```
