NIM-21612 AWS granular IAM policy + RN 7.5 updated

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -246,12 +246,17 @@ Network Function Groups and connectivity to Direct Connect Gateways, will be add
 
 !!! Warning "Don't forget to update IAM policy"
 
-    In order to collect AWS Cloud WAN network data, the relevant IAM policy must be updated first.
-    You can find the updated IAM policy for IPF 7.5 [here](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/aws/IAM-policy-IPF_7.5.json).
-    There are three changes compared to the previous version:
+    In order to collect AWS Cloud WAN network data, the relevant IAM policy
+    must be updated first. You can find the updated IAM policies for IPF 7.5
+    [here](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/AWS_Amazon_Web_Services.md).
+    Together with fully granular version of IAM policy, we provide also a
+    simplified version where:
 
-      1. The entire **IAM policy for EC2 has been simplified**. Instead of listing each action individually, actions are now grouped
-      (`ec2:DescribeVpcs`, `ec2:DescribeSubnets`, ... => `ec2:Describe*`). The complete list of actions can still be found in the [feature matrix](https://matrix.ipfabric.io/).
+      1. The entire **IAM policy for EC2 has been simplified**. Instead of
+         listing each action individually, actions are now grouped
+         (`ec2:DescribeVpcs`, `ec2:DescribeSubnets`, ... => `ec2:Describe*`).
+         The complete list of actions can still be found in the
+         [feature matrix](https://matrix.ipfabric.io/).
 
       2. A new statement for **networkmanager** (Cloud WAN) has been added:
 
