NIM-21118 Meraki Doc - Update 7.8

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -60,6 +60,10 @@ A new **IPv6 Managed IP Summary** table has been added under **Technology → Ad
   - The cluster group name is now displayed in a new column, `AP Cluster Name`, within the table: `Technology/Wireless/Access points`.
 - Added support for Fortinet IPv4 and IPv6 route summary tables.
 - Added support for Cisco ASA, ACI, IOS XR, NX-OS, FTD and Palo Alto IPv6 route summary tables.
+- Added port-channel support and management interface for Meraki switches.
+- Fixed xDP interface numbering for Meraki firewalls.
+- Added switchport support on the LAN side of Meraki firewalls.
+
 
 ### API Changes
 
