Add documentation and release notes for interface descriptions on diagram edges.

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -46,6 +46,7 @@ A new **IPv6 Managed IP Summary** table has been added under **Technology → Ad
 #### GUI
 
 - An overview of active filters, with buttons to easily remove them, was added to all tables.
+- It is now possible to display interface descriptions on diagram edges in the form of line cap labels.
  
 #### Path Lookup
 
