--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -48,33 +48,40 @@ issue is resolved in one of the upcoming releases.
 
 ![Disable NAT44 discovery task for FortiGate](previous_releases/IP_Fabric_v7.x.x/7.2/7.2_disabled_task_forti_nat44.png)
 
-#### NX-OS Routing Table Discovery Issues
+## v7.3.23 (November 10th, 2025; GA)
 
-In version `7.3`, we introduced support for the Cisco NX-OS `show ip route detail full` command to retrieve truncated routing table information. Unfortunately, this implementation causes the discovery algorithm to hang when processing certain NX-OS devices.
+```
+SHA256 (ipfabric-update-7-3-23+0.tar.zst.sig) = cafeadd00a5e5aea8018ebfeb4c8351d58ad25ad0f6c2005d54263eb6ae7219f
+MD5 (ipfabric-update-7-3-23+0.tar.zst.sig) = 8bf98d13949d624ac5e9cead97b4f0e3
+SHA256 (ipfabric-7-3-23+0.qcow2) = abdf242b63c4ffab7563bb71f85785bd7ee011f43b05ea16c05c9816c60a3635
+MD5 (ipfabric-7-3-23+0.qcow2) = 109729a22920afbda72d29d0f6178ef2
+SHA256 (ipfabric-7-3-23+0.vmdk) = ff6c5d49efd83c3ff8ecfd3cd3dc37e530802d153d51eec2900c29d38571ef6d
+MD5 (ipfabric-7-3-23+0.vmdk) = 9a8a78af482228775e373067fe24f54c
+SHA256 (ipfabric-7-3-23+0.vhdx.zst) = 69ff5fea8aced997387d84192c9580753b2bd8dd8e6f86f4ee81ed3c43eba64d
+MD5 (ipfabric-7-3-23+0.vhdx.zst) = a3673ee188adfde6ffd79b73a4d8291f
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-23+0.ova) = 99f7f062c38c940ed8fcf046b1638c277883e062f6dc0f93f0c6d70b54d428a3
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-23+0.ova) = df81da296726702cd8c73e001ca94983
+SHA256 (unsupported-ESXi7.0-ipfabric-7-3-23+0.ova) = 6ba329b79345e0eb46368b37ed93703b6eae22f57860d55d0e9108d22c4b7db8
+MD5 (unsupported-ESXi7.0-ipfabric-7-3-23+0.ova) = 3104da01293fecb6afb252546dd7601a
+SHA256 (ESXi8.0-ipfabric-7-3-23+0.ova) = ab176e7f605d0123940c239b16185bf91969313932d9e82449a2e7bdc7f8a043
+MD5 (ESXi8.0-ipfabric-7-3-23+0.ova) = cd1347201b01f1ca898b6a76c5d3c653
+```
 
-If you're experiencing extended discovery times (9+ hours), this issue is likely the cause. As a temporary workaround, disable the **Routing table** task for affected devices (SNs or whole NX-OS family) under:
-**Settings → Discovery & Snapshots → Discovery Settings → Disabled Discovery Tasks**.
+### Important Notice
 
-Processing of `show ip route detail full` commands has improved significantly in version `7.3.20`. You may not experience these issues after the upgrade.
+All new installations utilise the GPT disk partitioning scheme, while older versions and all pre-existing installations
+utilise the MBR partitioning scheme. More details can be found on [Server Disk Space Summary](../../System_Administration/increase_disk_space.md).
+
+### Improvements
+- Corrected version detection on Huawei YunShan devices
+- Added JSON output to ipf-checker
+- [Configuration import/export feature](../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md) now also includes manual links, saved filters and views, graph views, path lookup checks and advanced options, and graph positions
+- Added support for Discovery History in [Configuration import/export](../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md) feature
+- Fixed missing access points on Cisco WLC (wlc-air) platforms
+- Fixed wired hosts not appearing in **Inventory --> Hosts** despite being present in ARP tables
+- Fixed the `Status` column filter in **Management --> Configuration** so `no change` works correctly
 
 ## v7.3.22 (October 21th, 2025; GA)
-
-```
-SHA256 (ipfabric-update-7-3-22+1.tar.zst.sig) = 81ccddf60bdce7145f194a77bf908658822b17c39a9897946e29097af773bd21
-MD5 (ipfabric-update-7-3-22+1.tar.zst.sig) = e33f5efd1adb45c0012f8d7ad81e1de5
-SHA256 (ipfabric-7-3-22+1.qcow2) = d694322cc14488d9833c17ed4a97b4cc3a6c1e21a3ec098bfd1262677e95962f
-MD5 (ipfabric-7-3-22+1.qcow2) = c8ad46890572b68bc7f01ba734c0e195
-SHA256 (ipfabric-7-3-22+1.vmdk) = 4a9b13a7a608d3c9c4bf71dc817a3aee763d419bd6bdfc78bcd70e180bdb977a
-MD5 (ipfabric-7-3-22+1.vmdk) = 57211686ea4cdac7a7320aabe4196c2a
-SHA256 (ipfabric-7-3-22+1.vhdx.zst) = 5985d59b0e919fc5e428fc218aa6b063d9c70d7094fb8b0caabca80a9b3620d4
-MD5 (ipfabric-7-3-22+1.vhdx.zst) = f7f225723b3a4cab3bf465bd4bf2fa58
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-22+1.ova) = 1977b9c9e91cd700f5a128f2bf56db636ede9f2bc0dee79c75242a49e7a5b470
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-22+1.ova) = b7f1ad77742cda24c84c45459e4ce0b3
-SHA256 (unsupported-ESXi7.0-ipfabric-7-3-22+1.ova) = 0b9609fdddf5f8b674b14c1a15915d2aacb4a75fa6cf6712bf1069160c912b5b
-MD5 (unsupported-ESXi7.0-ipfabric-7-3-22+1.ova) = ee110526906ca10b5797fb7dc883165c
-SHA256 (ESXi8.0-ipfabric-7-3-22+1.ova) = 5ecbcee1ca51fab17a6fecd708037e910f5608bd2298deb03f09a3b3b5859c3c
-MD5 (ESXi8.0-ipfabric-7-3-22+1.ova) = 94037ff33be580c5dc53e26cb7ecbbd3
-```
 
 ### Improvements
 
@@ -93,7 +100,7 @@ MD5 (ESXi8.0-ipfabric-7-3-22+1.ova) = 94037ff33be580c5dc53e26cb7ecbbd3
 ### Improvements
 
 - The previous limitation of 4,000 firewall rules per device during path lookup has been removed. The path lookup engine is now capable of evaluating an unlimited number of firewall rules.
-- Processing of `show ip route detail full` commands has improved significantly.
+- Processing of `show ip route detail full` commands on Cisco NX-OS has improved significantly.
 - End of life detail table no longer contains duplicate records for the same `PID Serial Number`.
 
 ### Fixes
