--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,30 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 650 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 660 fixed issues.
+
+## 7.3.23
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-21881` -- High -- Missing APs for older WLC version than 9800
+- `NIM-21884` -- High -- Wired hosts missing in Inventory → Hosts are being visible in ARP tables.
+- `NIM-21911` -- High -- Dell - parsing errors during PoC
+- `NIM-22018` -- Medium -- Management > Configuration - filter Status `no change` does not work
+- `NIM-22064` -- Highest -- pre-upgrade-check timed out after 60 seconds due to IPF checker I/O
+- `NIM-22073` -- Highest -- Config import failing on required 'discovery-history'
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-21893` -- Highest -- Huawei YunShan - fix ver detection and run disco as VRP
+- `NIM-21948` -- Medium -- [ipf-checker] - implement json output
+- `NIM-21958` -- Highest -- Integrate pre-upgrade check with ipf-checker and use disk check as a gate for upgrade
+- `NIM-21972` -- Highest -- Backport configuration export from 7.5 to 7.3
+- `NIM-21973` -- Highest -- Add support for Discovery History export/import
 
 ## 7.3.21
 
@@ -244,7 +267,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-19138` -- Medium -- Zone firewall table, can't filter for empty from/to zone or match in/out interfaces
 - `NIM-19413` -- Medium -- AWS - Security token expired during discovery
 - `NIM-19460` -- Highest -- scanWorker Allocation failed - JavaScript heap out of memory
-- `NIM-19489` -- Highest -- Changing Snapshot Attributes does not perform Intent Recalculation
 - `NIM-19490` -- Medium -- IPF is not able to discover endpoints in vNet vn-prod_wvd-use2-01
 - `NIM-19584` -- Highest -- BGP communities not applied on manual snapshots
 - `NIM-19622` -- Highest -- BGP Community filtering doesn't work on IOS-XR
