MQ-9153: Release 7.5.11 for GA

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -154,28 +154,54 @@ Upgrading from **7.3 (ArangoDB)** to **7.5 (PostgreSQL)** introduces significant
 
 - **Table Loading Performance:** For the majority of commonly used tables, we have optimized their performance. We are currently working on optimizing the performance of other tables. Please actively report any table that exhibit slow performance, and we will promptly address and improve their performance.
 
+### Extensions Migration
+
+When upgrading from version `7.3` to `7.5`, **Extensions are not migrated**.
+
+If your deployment uses the Extensions feature, please **remove all extensions before upgrading**, and **re-import them manually** after the upgrade. This serves as a temporary workaround until the migration process is fully supported.
+
+If extensions are **not removed prior to the upgrade**, they will continue to run in the background but **will not appear in the GUI** and **will be inaccessible**.
+
 ### Backward Compatibility
 
 - Snapshots from release `5.x` and earlier are not supported and may fail to load properly.
 
-## v7.5.10 (October 31st, 2025; GA)
+## v7.5.11 (November 10th, 2025; GA)
 
 ```
-SHA256 (ipfabric-update-7-5-10+0.tar.zst.sig) = a58054795da9906818ce7e8274e6a18dbe995099612fb24e4ac04179c13e9ab4
-MD5 (ipfabric-update-7-5-10+0.tar.zst.sig) = 385a621fe3219141edd656f075f3cae0
-SHA256 (ipfabric-7-5-10+0.qcow2) = 9f631190d571b0b96955158a15d0aeaf21f7dac3c020148690b26902d8ca23c6
-MD5 (ipfabric-7-5-10+0.qcow2) = cbd1c96c7d731a558ad04f67c5ea3014
-SHA256 (ipfabric-7-5-10+0.vmdk) = 5e8a6ed06bc2f4e956544318aa4570329848bdbe76b07bdf4b15a89ce267183b
-MD5 (ipfabric-7-5-10+0.vmdk) = b9f5304d4eb37e95cdddbf73cb132175
-SHA256 (ipfabric-7-5-10+0.vhdx.zst) = c0f1ad086d885a06794548ec6afe6a00e8463e63689aed47a10817ecccdafc9c
-MD5 (ipfabric-7-5-10+0.vhdx.zst) = efd80906527f4670d4073b84118b2b31
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-5-10+0.ova) = 83efba239a10aca70e2010b7126867beb8fb624333138515de29cd4a20c41d1f
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-5-10+0.ova) = 6d036bbf943883f55afd147b96c36a92
-SHA256 (unsupported-ESXi7.0-ipfabric-7-5-10+0.ova) = 840052d41598cbe9d0d7c14d2872271e539630062b443e0c6046cecdd5ff93b0
-MD5 (unsupported-ESXi7.0-ipfabric-7-5-10+0.ova) = b02f21441ee5b2df071854e41d00d99e
-SHA256 (ESXi8.0-ipfabric-7-5-10+0.ova) = 74e0e730f7a322cd9067bd6fec8b3aeb55bc2f91c3fe2a9b6c1af07af6134591
-MD5 (ESXi8.0-ipfabric-7-5-10+0.ova) = a722d92fa16bd07032005a62a6bf22c0
+SHA256 (ipfabric-update-7-5-11+0.tar.zst.sig) = 736baeefac1fae08d1b15b862fb430a68235009261bcefa5885c99ccf3c3fbde
+MD5 (ipfabric-update-7-5-11+0.tar.zst.sig) = 65d2973ca59bd4c5d33eeee94f5e7eee
+SHA256 (ipfabric-7-5-11+0.qcow2) = ce9d7fc0b2df9aa8f98c0784faebde01b7f00fe857ea4169de336a99184f130a
+MD5 (ipfabric-7-5-11+0.qcow2) = 5e2e8bfff678d9b0d4c34c943e6b0d28
+SHA256 (ipfabric-7-5-11+0.vmdk) = 88698891c8ff27c620d6610819968fefa37bdfd100548ed21ceb62a9f51f2efa
+MD5 (ipfabric-7-5-11+0.vmdk) = d7a35cad1dbaeae78f488c02fab0ec28
+SHA256 (ipfabric-7-5-11+0.vhdx.zst) = eef5757708e01caf5853503ddcd9f4d5e7782c00b367c4feebfaa039e9aa514a
+MD5 (ipfabric-7-5-11+0.vhdx.zst) = 03525593dd5498842d04410baf89d5f8
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-5-11+0.ova) = 6a6665852204fb99b552d4180e7ec1688ced804b0b295bcb567d2b6e1f324db8
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-5-11+0.ova) = 4f4f2d014ef64bd88ceaf3befbd8990b
+SHA256 (unsupported-ESXi7.0-ipfabric-7-5-11+0.ova) = e761c363e2fd384246a4234ebf04202053db595136278446185853b128d55fb7
+MD5 (unsupported-ESXi7.0-ipfabric-7-5-11+0.ova) = 79fa118399d4f56dcd53546f54508c93
+SHA256 (ESXi8.0-ipfabric-7-5-11+0.ova) = 77260c2604cbe9a658140a9938339267cd4c42c1ee850a36f8bf4542f17b88b7
+MD5 (ESXi8.0-ipfabric-7-5-11+0.ova) = 7bb8edb519180d1d548d71cf8aec6a81
 ```
+
+### Important Notice
+
+All new installations utilise the GPT disk partitioning scheme, while older versions and all pre-existing installations
+utilise the MBR partitioning scheme. More details can be found on [Server Disk Space Summary](../../System_Administration/increase_disk_space.md).
+
+### Improvements
+- Corrected version detection on Huawei YunShan devices.
+- Added JSON output for ipf-checker.
+- Added support for Discovery History in [Configuration import/export](../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md) feature.
+- Optimized PostgreSQL performance for **Technology --> Addressing --> Managed IP --> IPv4 Managed IP** table.
+- Optimized PostgreSQL query for the Snapshot Inventory table (tables/snapshotDevices).
+- Improved Saved config consistency check for Juniper,F5 and Cisco IOS-XR devices.
+- Fixed the `Status` column filter in **Management --> Configuration** so `no change` works correctly
+- Fixed missing data for `not present` power supplies on Cisco IOS-XE devices.
+
+## v7.5.10 (October 31st, 2025; GA)
+
 
 ### Improvements
 
