--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -6,9 +6,41 @@ search:
 
 # LLRN 7.5
 
-These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 944 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 961 fixed issues.
+
+## 7.5.11
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-21825` -- High -- Cisco WLC-Air - no 2.4 GHz radios visible in BSSID table [requested check from customer]
+- `NIM-21860` -- High -- Parsing issues on PaloAlto
+- `NIM-21881` -- High -- Missing APs for older WLC version than 9800
+- `NIM-21885` -- High -- Juniper / F5 - Saved config consistency - current config not available
+- `NIM-21896` -- High -- Cisco ios-xr - Saved config consistency - current config not available
+- `NIM-21954` -- High -- PSQL Slow Managed IPv4 address table
+- `NIM-21955` -- Highest -- Slow PSQL query for Snapshot Inventory table
+- `NIM-21995` -- High -- Missing data for not present power supplies for Cisco IOS-XE
+- `NIM-22018` -- Medium -- Management > Confguration - filter Status `no change` does not work
+- `NIM-22064` -- Highest -- pre-upgrade-check timed out after 60 seconds due to IPF checker I/O
+- `NIM-22073` -- Highest -- Config import failing on required 'discovery-history'
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-21893` -- Highest -- Huawei YunShan - fix ver detection and run disco as VRP
+- `NIM-21948` -- Medium -- [ipf-checker] - implement json output
+- `NIM-21973` -- Highest -- Add support for Discovery History export/import
 
 ## 7.5.10
+
+### Epics
+
+Epics are high-level features, that may consist of many tasks.
+
+- `NIM-21859` -- High -- Azure Mapping failures
 
 ### Bugs
 
@@ -48,6 +80,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 Task may be associated into Epics or Stories to form complex features.
 
 - `NIM-21648` -- Medium -- Update IPF Checker with IOPS values
+- `NIM-21958` -- Highest -- Integrate pre-upgrade check with ipf-checker and use disk check as a gate for upgrade
 - `NIM-21963` -- Highest -- Set default Maximum number of loaded snapshots and locked snapshots in 7.5 to same values like in 7.3
 
 ### Sub-Tasks
@@ -503,12 +536,12 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-17374` -- Medium -- Discovery improvements [7.5]
 - `NIM-17401` -- High -- Support for IPv6 in GUI
 - `NIM-17744` -- Medium -- OAS Improvements
-- `NIM-17950` -- High -- Implement PostgresTaskerSetEdgeAzureExpressRouteDataProvider data provider
+- `NIM-17950` -- High -- Implement PostgresTaskerSetEdgeAzureExpressRouteDataProvider data provider [7.5]
 - `NIM-18154` -- Medium -- Create an API client generated from OAS to improve type consistency
 - `NIM-18450` -- High -- Extensions – security
 - `NIM-18629` -- Highest -- Follow up on AQL/PSQL queries
 - `NIM-18696` -- High -- Add support for Multi-Segment/tenant SD-WAN routing 7.5
-- `NIM-18856` -- High -- Add support for F5OS - basic vendor discovery of chassis information
+- `NIM-18856` -- High -- Add support for F5OS - basic vendor discovery of chassis information [7.5]
 - `NIM-18869` -- Medium -- Discover Cisco 9300 switches running in cloud-native mode via Meraki API
 - `NIM-18897` -- Medium -- Cloud scaling groups [7.5]
 - `NIM-18984` -- Medium -- Cloud subnets discovery 7.8
@@ -518,12 +551,14 @@ Epics are high-level features, that may consist of many tasks.
 - `NIM-19114` -- Medium -- Viptela - Collect Device Configuration
 - `NIM-19147` -- High -- Config Backup over IPv6
 - `NIM-19162` -- High -- Extensions - bugs
+- `NIM-19254` -- High -- Configuration import/export [7.5]
 - `NIM-19381` -- Medium -- Utilize Chromatic for automated visual testing of Storybook library
 - `NIM-19393` -- Medium -- Cisco Meraki - Path lookup improvements - research [7.5]
 - `NIM-19397` -- High -- PSQL - Fix partition selection in API Tables
 - `NIM-19425` -- Medium -- AWS NAT gateway NAT44
 - `NIM-19427` -- High -- Update Table component according to UX proposal
 - `NIM-19548` -- Medium -- PSQL - Fix partition selection in e2e path lookup queries
+- `NIM-19949` -- Medium -- PSQL Correctness & Performance Testing [GA]
 
 ### Bugs
 
@@ -725,7 +760,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-19473` -- Medium -- Add pagination support for backup command in cisco/routingTable
 - `NIM-19476` -- Highest -- Deleting a Path Verification removes different row than where delete was clicked
 - `NIM-19483` -- Medium -- Unexpected null in Rule.test in zone firewall of `L71FW9/root`
-- `NIM-19489` -- Highest -- Changing Snapshot Attributes does not perform Intent Recalculation
 - `NIM-19490` -- Medium -- IPF is not able to discover endpoints in vNet vn-prod_wvd-use2-01
 - `NIM-19491` -- Medium -- Azure - Cannot map the Load Balancer "ilb-tfe_web-dev-uscn": ValidationError: "probeList[0].requestPath" is not allowed
 - `NIM-19494` -- Highest -- scanWorker creates massive log outputs and includes sensitive information
