NIM-21935 Update logging section [7.8]

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -81,3 +81,4 @@ A new **IPv6 Managed IP Summary** table has been added under **Technology → Ad
 ### Miscellaneous
 
 - BGP AS number format can be changed to [ASplain using a Configuration Flag](../../System_Administration/Command_Line_Interface/Configuration_Flags.md#bgp-asplain-notation). 
+- Discovery and API system logs are now available under separate [journald namespaces](../../System_Administration/Command_Line_Interface/Logging.md#service-logs). 
