Nae/nim 22254 cloud improvements 7 8 rn

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -50,7 +50,24 @@ A new **IPv6 Managed IP Summary** table has been added under **Technology → Ad
  
 #### Path Lookup
 
-.
+#### Cloud
+- **New device icons** for the AWS and Azure clouds in network and path-lookup diagrams to improve navigation.
+
+![AWS icons](../../images/miscellaneous/IP_Fabric_GUI-network-viewer-device-aws-icons.webp) ![](../../images/miscellaneous/IP_Fabric_GUI-network-viewer-device-azure-icons.webp)
+
+- Added support for **GCP multi-project** environments. Available projects are fetched at the very beginning of the discovery.
+- A new **Cloud Subnets Inventory** table has been added under **Technology → Cloud → Subnets**, and new cloud vendor-specific subnets tables under **Technology → Cloud → Vendors**.
+- A new **Cloud Public IPs** table under **Technology → Cloud** showing all IPv4 and IPv6 public IPs - even those unused.
+- New **Cloud Private Link Endpoints** and **Private Link Services** tables under **Technology → Cloud**, and vendor-specific tables:
+  - **Service Endpoints**, **Private Link**, and **VNet Integration** under **Technology → Cloud → Vendors → Azure**
+  - **Private Service Connect** under **Technology → Cloud → Vendors → GCP**, covering Endpoints, Published Services, and Published Service Connections
+- A new **Cloud Endpoint Groups** table under **Technology → Cloud → Endpoints**, and vendor-specific tables under **Technology → Cloud → Vendors** covering **AWS Scaling Groups**, **Azure Virtual Machine Scale Sets**, and **GCP Instance and Network Endpoint Groups**.
+- Added support for the **Azure Firewall** - classic rules and policy-based firewall, and support for network, application, and DNAT rules. 
+  - Limitations:
+    - Application rules with FQDN tags are not supported.
+    - DNAT rules with FQDN are not supported.
+    - Azure Firewall deployed in vWAN is not supported.
+- Added support for GCP interconnect.
 
 #### Vendor Support and Improvements
 
